// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly handle the submit event and close the modal 1`] = `
Array [
  Array [
    Object {
      "avatar": "",
      "groupCount": 3,
      "login": "admin",
      "name": "Admin Istrator",
    },
    Array [
      "7",
    ],
    Array [
      "11",
    ],
  ],
]
`;

exports[`should correctly handle the submit event and close the modal 2`] = `
Object {
  "loading": false,
  "open": false,
  "userGroups": Object {
    "11": Object {
      "description": "Technical accounts",
      "id": 11,
      "name": "pull-request-analysers",
      "selected": true,
      "status": "remove",
    },
    "7": Object {
      "status": "add",
    },
  },
}
`;

exports[`should correctly handle user interactions 1`] = `
Object {
  "loading": false,
  "open": true,
  "userGroups": Object {
    "11": Object {
      "description": "Technical accounts",
      "id": 11,
      "name": "pull-request-analysers",
      "selected": true,
    },
  },
}
`;

exports[`should correctly select the groups 1`] = `
Object {
  "11": Object {
    "description": "Technical accounts",
    "id": 11,
    "name": "pull-request-analysers",
    "selected": true,
    "status": "remove",
  },
  "7": Object {
    "status": "add",
  },
}
`;

exports[`should render and open the modal 1`] = `
<ActionsDropdownItem
  onClick={[Function]}
>
  organization.members.manage_groups
</ActionsDropdownItem>
`;

exports[`should render and open the modal 2`] = `
Array [
  <ActionsDropdownItem
    onClick={[Function]}
  >
    organization.members.manage_groups
  </ActionsDropdownItem>,
  <Modal
    contentLabel="organization.members.manage_groups"
    onRequestClose={[Function]}
  >
    <header
      className="modal-head"
    >
      <h2>
        organization.members.manage_groups
      </h2>
    </header>
    <form
      onSubmit={[Function]}
    >
      <div
        className="modal-body"
      >
        <strong>
          organization.members.members_groups.Admin Istrator
        </strong>
         
        <ul
          className="list-spaced"
        >
          <OrganizationGroupCheckbox
            checked={false}
            group={
              Object {
                "description": "",
                "id": "7",
                "membersCount": 12,
                "name": "professionals",
              }
            }
            onCheck={[Function]}
          />
          <OrganizationGroupCheckbox
            checked={false}
            group={
              Object {
                "description": "Technical accounts",
                "id": "11",
                "membersCount": 3,
                "name": "pull-request-analysers",
              }
            }
            onCheck={[Function]}
          />
          <OrganizationGroupCheckbox
            checked={false}
            group={
              Object {
                "description": "System administrators",
                "id": "1",
                "membersCount": 17,
                "name": "sonar-administrators",
              }
            }
            onCheck={[Function]}
          />
        </ul>
      </div>
      <footer
        className="modal-foot"
      >
        <div>
          <button
            type="submit"
          >
            save
          </button>
          <button
            className="button-link"
            onClick={[Function]}
            type="reset"
          >
            cancel
          </button>
        </div>
      </footer>
    </form>
  </Modal>,
]
`;

exports[`should reset the selected groups when the modal is opened 1`] = `
Object {
  "loading": false,
  "open": true,
  "userGroups": Object {
    "11": Object {
      "description": "Technical accounts",
      "id": 11,
      "name": "pull-request-analysers",
      "selected": true,
      "status": "remove",
    },
    "7": Object {
      "status": "add",
    },
  },
}
`;

exports[`should reset the selected groups when the modal is opened 2`] = `
Object {
  "loading": false,
  "open": true,
  "userGroups": Object {
    "11": Object {
      "description": "Technical accounts",
      "id": 11,
      "name": "pull-request-analysers",
      "selected": true,
    },
  },
}
`;
